# tree-sitter-jinja2

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  tree-sitter-jinja2.wasm  tree-sitter.json
bindings/c/: tree-sitter-jinja2.pc.in
bindings/c/tree_sitter/: tree-sitter-jinja2.h
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/jinja2/: TreeSitterJinja2.java
bindings/java/test/: TreeSitterJinja2Test.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jinja2/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
