[package]
name = "tree-sitter-jinja2"
description = "jinja2 grammar for the tree-sitter parsing library"
version = "0.0.13"
keywords = ["incremental", "parsing", "jinja2"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/uros-5/tree-sitter-jinja2"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "^0.1"

[build-dependencies]
cc = "1.0"
