[package]
name = "tree-sitter-jinja2"
description = "Jinja2 grammar for tree-sitter"
version = "0.0.14"
authors = ["Uros Mrkobrada <uros.mrkobrada@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "jinja2"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/uros-5/tree-sitter-jinja2"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.9"
